syntax = "proto3";

option go_package = "internal/domain/messages;simplepb";

message SimpleMessage {
	int32 id = 1;
	bool is_available = 2;
	string name = 3;
	repeated int32 simple_list = 4;
}
